--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Linkdrop <linkdrop.org>",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": "16.13.1"
+  },
   "scripts": {
     "start": "npx babel-node server.js",
     "dev": "nodemon --exec npx babel-node server.js",
